changed some spellings

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
           <hr>
           <div class="contact-me">
             <h2>Get In Touch</h2>
-            <h3>If you look to read as much as i do  </h3>
-            <p class = "contact-message">Look to read thrillers? Lets talk about how awesome they are while we code together.</p>
+            <h3>If you love to read as much as i do  </h3>
+            <p class = "contact-message">Love to read thrillers? Lets talk about how awesome they are while we code together.</p>
             <a class="btn" href="mailto:ankitachowdhuryy6o@gmail.com">CONTACT ME</a>
           </div>
 
